# texturegen

./: Cargo.toml
src/: dag.rs  lib.rs  utils.rs
src/process/: combiners.rs  inputs.rs  mod.rs  modifiers.rs
src/shader/: mod.rs
texturegen/: Cargo.toml
texturegen-gui/: Cargo.toml
texturegen-gui/src/: events.rs  main.rs  math.rs
texturegen-gui/src/graphics/: fonts.rs  mod.rs  renderer.rs
texturegen/src/: dag.rs  lib.rs
texturegen/src/process/: combiners.rs  inputs.rs  mod.rs  modifiers.rs
texturegen/src/shader/: mod.rs
