[package]
name = "texturegen-gui"
version = "0.1.0"
authors = ["WaDelma <delma@del.ma>"]

[dependencies]
nalgebra = "0.14.1"
daggy = "0.5.0"
conrod = "0.58.0"
glium = "0.20.0"
image = "0.18.0"
rusttype = {version = "0.4.1", features = ["gpu_cache"]}
unicode-normalization = "0.1.5"
arrayvec = "0.4.7"

[dependencies.texturegen]
path = "../texturegen"

[dependencies.webweaver]
path = "../../webweaver"
# git = "https://github.com/WaDelma/webweaver"
